Fix loading veil z-index

--- a/src/app/features/create/create.component.scss
+++ b/src/app/features/create/create.component.scss
@@ -8,6 +8,8 @@
 .fullscreen-loading-veil {
     @include full-screen;
     @include loading-veil;
+    
+    z-index: 10;
 }
 
 .success-message {
