--- a/src/app/features/illustration/illustration.component.scss
+++ b/src/app/features/illustration/illustration.component.scss
@@ -118,6 +118,8 @@
 .fullscreen-loading-veil {
     @include full-screen;
     @include loading-veil;
+    
+    z-index: 10;
 }
 
 // Visitor View elements
